# budget-tracker

./: .gitignore  pyproject.toml
src/budget_tracker/: categorise.py  config.py  dashboard.py  engine.py  etl.py  learn.py  main.py  tester.py
src/budget_tracker/analytics/: debt.py  operating.py  p2p.py
