[project]
name = "budget-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.12.0",
    "rapidfuzz>=3.14.3",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "mypy>=1.19.0",
    "pandas-stubs>=2.3.3.251201",
    "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/budget_tracker"]

[tool.deptry]
known_first_party = ["budget_tracker"]

[tool.deptry.per_rule_ignores]
DEP002 = ["openpyxl"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true
